feat: add swagger to Create
